# RaptorFFT

./: CMakeLists.txt
cmake/: raptorfftConfig.cmake
include/raptorfft/: fft_preview.h  fft_preview_client.h
src/: fft_preview.cpp  fft_preview_client.cpp
